<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- localized presence representation -->
    <string name="presence_offline">unavailable</string>
    <string name="presence_error">error</string>
    <string name="presence_chat">ready for chat</string>
    <string name="presence_away">away</string>
    <string name="presence_xa">not available</string>
    <string name="presence_dnd">do not disturb</string>
    <string name="presence_online">online</string>
    <string name="presence_invisible">invisible</string>

    <!-- TODO More friendly subscription -->
    <string name="subscr_request_from">This user wants to subscribe to your presence</string>
    <string name="subscr_received">You are now authorized</string>
    <string name="subscr_deleted">Your authorization has been removed</string>
    
    <string name="labelJidUserName">User Name</string>
    <string name="labelPassword">Password</string>
    <string name="labelResource">Resource</string>
    <string name="defaultResource">Lime</string>
    <string name="labelBareJid">Jabber ID</string>
    <string name="menuStatus">Status</string>
    <string name="logEnable">Enable XML</string>
    <string name="logFreeze">Freeze</string>
    <string name="logClear">Clear</string>
    <string name="loggerActivity">Debug Log</string>
    <string name="buttonLogout">Logout</string>
    <string name="preferences">Preferences</string>
    
    <string name="accountSecurity">Security</string>
    <string name="accountConnection">Connection settings</string>
    <string name="accountResource">Resource</string>
    
    <string name="sslPrompt">Encrypted TLS/SSL connection</string>
    <string-array name="sslOptions">
        <item>Disabled</item>
        <item>Enabled if available</item>
        <item>Always required</item>
        <item>Using legacy SSL</item>
    </string-array>

    <string name="plainPasswordPromt">Plain-password authentication</string>
    <string-array name="plainPassword">
        <item>Always</item>
        <item>Over encrypted connection</item>
        <item>Never</item>
    </string-array>
    
    
    <string name="xmppPort">port</string>
    <string name="xmppHost">Host name or IP</string>
    <string name="showPassword">Show password</string>
    <string name="advancedSettings">Show Advanced settings</string>
    <string name="specificXmppHostPort">Specific XMPP server address</string>
	<string name="account">Account</string>        
     
    <string name="streamCompression">Stream Compression</string>
    
    <string-array name="vcardLabels">
        <item>Full Name</item>
        <item>Nick</item>
        <item>Birthday</item>
        <item>Street</item>
        <item>Street2</item>
        <item>City</item>
        <item>State</item>
        <item>Post code</item>
        <item>Country</item>
        <item>Home phone number</item>
        <item>Phone number</item>
        <item>E-mail</item>
        <item>Position</item>
        <item>Organization</item>
        <item>Dept</item>
        <item>Website</item>
        <item>About</item>
    </string-array>
    
    <string name="xmppServiceDescription">Provides XMPP connectivity layer</string>
    
    <string name="resourcePriority">Priority</string>
    <string name="accountAutoLogin">Connect on startup</string>
    <string name="chatNotify">New message notification</string>
    <string name="messageMenuTitle">Message</string>
    <string name="copyToClipboard">Copy to clipboard</string>
    <string name="removeMessage">Remove from history</string>
    <string name="contactVCard">Show VCard</string>
    <string name="openChat">Open Chat</string>
    <string name="subscription">Subscription</string>
    <string name="subscrRequestFrom">Ask subscription</string>
    <string name="subscrSendTo">Grant subscription</string>
    <string name="subscrRemove">Revoke subscription</string>
    <string name="deleteContact">Delete contact</string>
    <string name="confirmDelete">Are you sure want delete this contact from your roster?</string>
    <string name="editContact">Edit contact</string>
    
    <string name="prefsMobileNetworkUsage">Mobile network usage</string>
    <string name="gprsAvatars">Load avatars over mobile connection</string>
    <string name="netMobileWifi">Using active Mobile or WiFi connection</string>
    <string name="netWifiOnly">Using WiFi connection only</string>
    
    <string name="cbEnabled">Enabled</string>
    <string name="cbDisabled">Disabled</string>
    
    <string name="prefsWiFiNetworkUsage">WiFi usage</string>
    <string name="WiFiLock">WiFi lock</string>
    <string name="WiFiLockEnabled">Hold WiFi active when screen is off</string>
    <string name="WiFiLockDisabled">Disabled</string>

    <string name="incomingMessageSound">Notification ringtone</string>
    <string name="notifyVibration">Vibration</string>
    <string name="notificationLed">Blink Notification Led</string>
    <string name="systemEnabled">If enabled globally</string>
    
    <string name="autoServiceStartup">Login when phone is turned on</string>
    <string name="cbEnableRebootStatus">Restore last status after reboot</string>

    <string name="prefsPrivacy">Privacy</string>
    <string name="allowUnknownContactsMessages">allow incoming messages</string>
    <string name="dropUnknownIncomingMessages">drop incoming messages</string>
    <string name="unknownContacts">Unknown contacts</string>
    
    <string name="hideOfflineContacts">Hide offline contacts</string>
    <string name="show">show</string>
    <string name="hide">hide</string>
    
    <string name="showSelfContact">Show self-contact</string>
    <string name="showSelfShow">show always</string>
    <string name="showSelfHide">hide when no other online resources</string>
    
    <string name="catRosterView">Roster view</string>
    <string name="catRosterViewHint">visible roster items</string>
    <string name="catNotifications">Notifications</string>
    <string name="catNetworkPolicy">Network policy</string>
    <string name="catStartup">Startup</string>
    <string name="catPrivacy">Privacy</string>
    <string name="catDebug">Debug</string>
    <string name="catDebugHint">Developer debug settings</string>
    
    <string name="loadingVcardProgress">Fetching VCard&#8230;</string>
    <string name="sendMessage">Send</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nickname">Nickname</string>
    <string name="nicknameResolveFromVCard">from VCard</string>
    <string name="contactAddGroup">Add group&#8230;</string>
    <string name="contactGroups">Groups</string>
    <string name="newContactTitle">New Contact</string>
    <string name="editContactTitle">Modifying Contact</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="newGroupName">New group name</string>
    <string name="invalidJid">Please provide correct Jabber ID in form username@domain.tld</string>
    <string name="networkDown">Can\&apos;t save changes. Connection is broken</string>
    <string name="aboutBombusLime">About</string>
    <string name="messageDelivered">Message Delivered</string>
    <string name="chatSentOffline">User is now offline. Message will be stored on server.</string>
    <string name="sslInfo">Certificate chain</string>
    <string name="addSmileMenuItem">Add smile</string>
    <string name="addMeMenuItem">Insert /me</string>
    <string name="shouldBeLoggedIn">You should be signed in to send message</string>
    
    <string name="recentPresences">Recent</string>
    <string name="priority">Priority</string>
    <string name="set">Set</string>
    <string name="closeChat">Close chat</string>
    <string name="presenceTo">Send presence to</string>
    <string name="presenceStatus">Status</string>
    <string name="presenceMessage">Message</string>
    <string name="priorityHint">default priority</string>
    
    <string name="logExport">Export log</string>
    <string name="cantWriteStorage">Can\'t write to storage</string>
    
    <string name="activeChats">Active chats</string>
	<string name="noActiveChats">No active chats available</string>
	
	<string name="cantQueryNickname">No nickname found for this contact</string>
    
</resources>