<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:order="10"
        android:title="@string/catRosterView" >
        <CheckBoxPreference
            android:key="HIDE_OFFLINES"
            android:defaultValue="false"
	        android:order="11"
            android:summaryOff="@string/show"
            android:summaryOn="@string/hide"
            android:title="@string/hideOfflineContacts" />
        <CheckBoxPreference
            android:key="SELF_CONTACT"
            android:defaultValue="false"
	        android:order="12"
            android:title="@string/showSelfContact" 
            android:summaryOn="@string/showSelfShow"
            android:summaryOff="@string/showSelfHide" />
        </PreferenceCategory>

</PreferenceScreen>