<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    
    <!-- 10 -->
    <header android:fragment="org.bombusim.lime.fragments.StockPreferenceFragment"
            android:title="@string/catRosterView"
            android:summary="@string/catRosterViewHint">
      <extra android:name="resource" android:value="roster_prefs" />
    </header>
    
    <!-- 20 -->
    <header android:fragment="org.bombusim.lime.fragments.StockPreferenceFragment"
            android:title="@string/catNotifications"
            >
      <extra android:name="resource" android:value="prefs_notify" />
    </header>
    
    <!-- 30 -->
    <header android:fragment="org.bombusim.lime.fragments.StockPreferenceFragment"
            android:title="@string/catNetworkPolicy"
            >
      <extra android:name="resource" android:value="prefs_net" />
    </header>
    
    <!-- 40 -->
    <header android:fragment="org.bombusim.lime.fragments.StockPreferenceFragment"
            android:title="@string/catStartup"
            >
      <extra android:name="resource" android:value="prefs_startup" />
    </header>
    
    <!-- 50 -->
    <header android:fragment="org.bombusim.lime.fragments.StockPreferenceFragment"
            android:title="@string/catPrivacy"
            >
      <extra android:name="resource" android:value="prefs_privacy" />
    </header>
    
    <!-- 100 -->
    <header android:fragment="org.bombusim.lime.fragments.StockPreferenceFragment"
            android:title="@string/catDebug"
            android:summary="@string/catDebugHint">
      <extra android:name="resource" android:value="prefs_debug" />
    </header>
</preference-headers>