<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<ScrollView 
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/okCancel"
    >

    <LinearLayout
        android:id="@+id/accountSettingsLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_marginTop="5dip"
            android:text="@string/account" />
	        
        <EditText android:id="@+id/jid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/labelBareJid"
            />
        
        <EditText android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/labelPassword"
            />

        <CheckBox
            android:id="@+id/showPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showPassword" />

        <Button
            android:id="@+id/advancedSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advancedSettings" />

        <LinearLayout
            android:id="@+id/layoutAdvancedSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

	        <TextView
	            style="?android:attr/listSeparatorTextViewStyle"
	            android:layout_marginTop="5dip"
	            android:text="@string/accountResource" />
	       
	        <EditText android:id="@+id/resource"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:inputType="text|textAutoComplete"
	            android:hint="@string/labelResource"
	            />

	        <EditText
	            android:id="@+id/priority"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/resourcePriority"
	            android:inputType="numberSigned"
	            />
	        
	        <CheckBox
	            android:id="@+id/autoLogin"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/accountAutoLogin" />
	        	        
	        <TextView
	            style="?android:attr/listSeparatorTextViewStyle"
	            android:text="@string/accountSecurity"
	            android:layout_marginTop="5dip"
	        />

	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/sslPrompt"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <Spinner
	            android:id="@+id/ssl"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:entries="@array/sslOptions" 
	            android:prompt="@string/sslPrompt"
	            >
	            
	        </Spinner>

	        <TextView
	            android:id="@+id/textView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/plainPasswordPromt"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
	        <Spinner
	            android:id="@+id/plainpassword"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:entries="@array/plainPassword" 
	            android:prompt="@string/plainPasswordPromt"
	             />
	        
	        <TextView
	            style="?android:attr/listSeparatorTextViewStyle"
	            android:layout_marginTop="5dip"
	            android:text="@string/accountConnection" />
	
	        <CheckBox
	            android:id="@+id/specificHostPort"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/specificXmppHostPort" />
	
	        <LinearLayout
	            android:id="@+id/linearLayotHost"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	
	            <EditText
	                android:id="@+id/xmpphost"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="4"
	                android:hint="@string/xmppHost" >
	
	                <requestFocus />
	            </EditText>
	
	            <TextView
	                android:id="@+id/textView1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="0"
	                android:text=":"
	                 />
	
	            <EditText
	                android:id="@+id/xmppport"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:hint="@string/xmppPort"
	                android:inputType="number" />
	
	        </LinearLayout>
	                    
	        <CheckBox
	            android:id="@+id/zlib"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/streamCompression" />
	        
	        </LinearLayout>
        
    </LinearLayout>
    

</ScrollView>

    <org.bombusim.lime.widgets.OkCancelBar
        xmlns:okcancelbar= "http://schemas.android.com/apk/res/org.bombusim.lime"
        android:id="@+id/okCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 

	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
        
		android:focusable="true"
	    android:focusableInTouchMode="true"
	            
        okcancelbar:positive="@string/save"
        okcancelbar:negative="@string/cancel"
        
        >
    </org.bombusim.lime.widgets.OkCancelBar>


</RelativeLayout>