<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/cmdLogin" android:showAsAction="always" android:title="@string/menuStatus" android:orderInCategory="10" android:icon="@drawable/status_online"></item>
    <item android:id="@+id/cmdAccount" android:title="@string/account" android:orderInCategory="30" android:icon="@android:drawable/ic_menu_manage"></item>
    <item android:id="@+id/cmdChat" android:showAsAction="always" android:title="Chat" android:orderInCategory="40" android:icon="@drawable/ic_menu_chat_dashboard"></item>
    <item android:id="@+id/cmdLog" android:title="Log" android:orderInCategory="50" android:icon="@android:drawable/ic_menu_report_image"></item>
    <item android:id="@+id/cmdSettings" android:orderInCategory="70" android:title="@string/preferences" android:icon="@android:drawable/ic_menu_preferences"/>
    
    <group android:id="@+id/groupLoggedIn">
        <item android:id="@+id/cmdAddContact" android:orderInCategory="80" android:icon="@android:drawable/ic_menu_add" android:title="Add Contact"/>
	    <item android:id="@+id/cmdDisco" android:orderInCategory="90" android:icon="@android:drawable/ic_menu_search" android:title="Service Discovery"/>
    </group>
    <item android:id="@+id/cmdAbout" android:title="@string/aboutBombusLime" android:orderInCategory="1000"></item>
    

</menu>