<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

	<ScrollView
	    android:id="@+id/scrollView1"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_above="@+id/linearLayout3"
	    android:layout_centerHorizontal="true" >

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
	    <LinearLayout
	        android:id="@+id/linearLayout2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
			android:orientation="horizontal"        
			>
	
	        <ImageView
		        android:id="@+id/photo"
		        android:paddingRight="8dip"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/ic_contact_picture" />
	        
	        <EditText
	            android:id="@+id/jid"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/labelBareJid"
	            android:inputType="textEmailAddress" >
	
	    	</EditText>
	        
	    </LinearLayout>
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/nickname"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <LinearLayout
	        android:id="@+id/linearLayout1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <EditText
	            android:id="@+id/nick"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="7" />
	
	        <Button
	            android:id="@+id/buttonResolveFromVCard"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/nicknameResolveFromVCard" />
	
	    </LinearLayout>
	    
	    <TextView
	        style="?android:attr/listSeparatorTextViewStyle"
	        android:layout_marginTop="5dip"
	        android:text="@string/contactGroups" />
	
	    <LinearLayout
	        android:id="@+id/groupLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	    </LinearLayout>
	
	    <Button
	        android:id="@+id/buttonAddGroup"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@android:drawable/ic_input_add"
	        android:gravity="center_vertical|left"
	        android:text="@string/contactAddGroup" />

	    <CheckBox
	        android:id="@+id/askSubscr"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/subscrRequestFrom" 
	        android:checked="true"/>
	
    </LinearLayout>

	</ScrollView>
	
   	<LinearLayout
	    android:id="@+id/linearLayout3"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:background="@android:drawable/bottom_bar" >
	
	    <Button
	        android:id="@+id/buttonSave"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:layout_weight="1"
	        android:text="@string/save" />
	
	    <Button
	        android:id="@+id/buttonCancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:layout_weight="1"
	        android:text="@string/cancel" />
	</LinearLayout>

   
</RelativeLayout>


